added header and footer content

--- a/index.html
+++ b/index.html
@@ -75,12 +75,17 @@
 
 	</div>
 	<footer class="footer" id="footer">
-		<div class="footer-policy">
-			<div class="container footer-policy__container">
-				<div class="footer-policy__copy">&#169; <span id="year"></span> Zone. - All rights reserved.</div>
-				<a href="/" class="footer-policy__link">Privacy</a>
-				<a href="/" class="footer-policy__link">Security</a>
-				<a href="/" class="footer-policy__link">Terms</a>
+		<div class="container">
+			<div class="footer-navbar">
+				
+			</div>
+			<div class="footer-policy">
+				<div class="footer-policy__container">
+					<div class="footer-policy__copy">&#169; <span id="year"></span> Zone. - All rights reserved.</div>
+					<a href="/" class="footer-policy__link">Privacy</a>
+					<a href="/" class="footer-policy__link">Security</a>
+					<a href="/" class="footer-policy__link">Terms</a>
+				</div>
 			</div>
 		</div>
 	</footer>
