added images and icons for all project

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 	<footer class="footer" id="footer">
 		<div class="container">
 			<div class="footer-navbar">
-				
+				<div>
+					
+				</div>
+				<div></div>
 			</div>
 			<div class="footer-policy">
 				<div class="footer-policy__container">
