--- a/index.html
+++ b/index.html
@@ -77,8 +77,31 @@
 	<footer class="footer" id="footer">
 		<div class="container">
 			<div class="footer-navbar">
-				<div>
-					
+				<div class="footer-navbar__1">
+					<p>
+						<a href="#" class="logo">
+							<img src="img/icons/logo.svg" alt="logo">
+							Zone
+						</a>
+					</p>
+					<p>
+						<a href="https://www.google.com/maps/">
+							<img src="img/icons/location.svg" alt="phone">
+							Dhaka, Bangladesh
+						</a>
+					</p>
+					<p>
+						<a href="tel:+1234567890">
+							<img src="img/icons/phone.svg" alt="phone">
+							0943833399
+						</a>
+					</p>
+					<p>
+						<a href="mailto:support@zone.com">
+							<img src="img/icons/envelop.svg" alt="phone">
+							support@zone.com
+						</a>
+					</p>
 				</div>
 				<div></div>
 			</div>
