changed footer and header

--- a/index.html
+++ b/index.html
@@ -78,32 +78,113 @@
 		<div class="container">
 			<div class="footer-navbar">
 				<div class="footer-navbar__1">
-					<p>
+					<div class="footer-logo">
 						<a href="#" class="logo">
 							<img src="img/icons/logo.svg" alt="logo">
 							Zone
 						</a>
-					</p>
+					</div>
 					<p>
 						<a href="https://www.google.com/maps/">
 							<img src="img/icons/location.svg" alt="phone">
-							Dhaka, Bangladesh
+							<span>Dhaka, Bangladesh</span>
 						</a>
 					</p>
 					<p>
 						<a href="tel:+1234567890">
 							<img src="img/icons/phone.svg" alt="phone">
-							0943833399
+							<span>0943833399</span>
 						</a>
 					</p>
 					<p>
 						<a href="mailto:support@zone.com">
 							<img src="img/icons/envelop.svg" alt="phone">
-							support@zone.com
+							<span>support@zone.com</span>
 						</a>
 					</p>
+					<ul class="footer-navbar__icons">
+						<li>
+							<a href="https://www.facebook.com/"><img style="top: 20%; left: 32%;" src="img/icons/fb-f.svg" alt="fb"></a>
+						</li>
+						<li>
+							<a href="https://www.twitter.com/"><img style="top: 26%; left: 21%;" src="img/icons/twit.svg" alt="tw"></a>
+						</li>
+						<li>
+							<a href="https://www.instagram.com/"><img style="top: 22%; left: 22%;" src="img/icons/insta.svg" alt="in"></a>
+						</li>
+						<li>
+							<a href="https://www.pinterest.com/"><img style="top: 22%; left: 24%;" src="img/icons/pin.svg" alt="pin"></a>
+						</li>
+					</ul>
 				</div>
-				<div></div>
+				<div>
+					<ul class="footer-service">
+						<li>Service</li>
+						<li>
+							<a href="#">Order Management</a>
+						</li>
+						<li>
+							<a href="#">Social Assistant</a>
+						</li>
+						<li>
+							<a href="#">Crypto Platform</a>
+						</li>
+						<li>
+							<a href="#">Analyzer of the News</a>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<ul class="footer-service">
+						<li>Company</li>
+						<li>
+							<a href="#">About Us</a>
+						</li>
+						<li>
+							<a href="#">News</a>
+						</li>
+						<li>
+							<a href="#">Our trusted partner</a>
+						</li>
+						<li>
+							<a href="#">New users FAQ</a>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<ul class="footer-service">
+						<li>Supports</li>
+						<li>
+							<a href="#">Help center</a>
+						</li>
+						<li>
+							<a href="#">Feedback</a>
+						</li>
+						<li>
+							<a href="#">Contact us</a>
+						</li>
+						<li>
+							<a href="#">Terms conditins</a>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<ul class="footer-service">
+						<li>Resources</li>
+						<li>
+							<a href="#">Download app</a>
+						</li>
+						<li>
+							<a href="#">Blog</a>
+						</li>
+						<li>
+							<a href="#">What’s new</a>
+						</li>
+						<li>
+							<a href="#">Sitemap</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="footer-policy">
 				<div class="footer-policy__container">
