--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 </head>
 
 <body>
-	<!-- <header class="header">
-		<div class="header__logo">Start</div>
-		<div class="header__nav">
-			<ul class="header__ul" id="headerUl">
-				<li class="header__li"><a class="header__a" href="/">Link 1</a></li>
-				<li class="header__li"><a class="header__a" href="/">Link 2</a></li>
-				<li class="header__li"><a class="header__a" href="/">Link 3</a></li>
-				<li class="header__li"><a class="header__a" href="/">Link 4</a></li>
-				<span class="material-icons icon-close">close</span>
-			</ul>
-			<span class="material-icons icon-menu" onclick="navToggle()">menu</span>
-		</div>
-	</header> -->
-
-
 	<div class="container">
+		<header class="header">
+			<div class="header__logo">
+				<a href="#" class="logo">
+					<img src="img/icons/logo.svg" alt="logo">
+					Zone.
+				</a>
+			</div>
+			<div class="header__nav">
+				<ul class="header__ul" id="headerUl">
+					<li class="header__li"><a class="header__a" href="/">Home</a></li>
+					<li class="header__li"><a class="header__a" href="/">About Us</a></li>
+					<li class="header__li"><a class="header__a" href="/">Service</a></li>
+					<li class="header__li"><a class="header__a" href="/">Pricing</a></li>
+					<li class="header__li"><a class="header__a" href="/">Blog</a></li>
+					<li class="header__li"><a class="btn header-btn" href="/">Contact Us</a></li>
+					<span class="material-icons icon-close">close</span>
+				</ul>
+				<span class="material-icons icon-menu" onclick="navToggle()">menu</span>
+			</div>
+		</header> 
 		<section class="welcome">
 			<div class="welcome__info slide-in-top">
 				<div class="welcome__title">Virtual Reality Business Solutions</div>
@@ -47,6 +52,99 @@
 				<img src="img/welcome.png" alt="Welcome">
 			</div>
 		</section>
+		<section class="service">
+			<h2 class="service-title">Our Service </h2>
+			<p class="service-title__text">
+				We turn information into actionable insights We work to understand your issues
+ 				and are driven to ask better questions in the pursuit of making work.
+			</p>
+			<div class="service-content">
+				<div class="service-content__card">
+					<img src="img/icons/icon.svg" alt="1">
+					<h3>Order Management</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+				<div class="service-content__card">
+					<img src="img/icons/icon2.svg" alt="2">
+					<h3>Social Assistant</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+				<div class="service-content__card">
+					<img src="img/icons/icon3.svg" alt="3">
+					<h3>Crypto Platform</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+				<div class="service-content__card">
+					<img src="img/icons/icon4.svg" alt="4">
+					<h3>Smart Trading Modules</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+				<div class="service-content__card">
+					<img src="img/icons/icon5.svg" alt="5">
+					<h3>Analyzer of the News</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+				<div class="service-content__card">
+					<img src="img/icons/icon6.svg" alt="6">
+					<h3>Module of Price Notification</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur the adipiscing elit. Sed quis accumsan
+						 nisi Ut ut felis congue nisl hendrerit commodo.
+					</p> 
+					<a href="#">
+						Learn more 
+						<svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M8.121 0.292787C7.93353 0.480314 7.82821 0.734622 7.82821 0.999786C7.82821 1.26495 7.93353 1.51926 8.121 1.70679L11.413 4.99979L1 5.00679C0.734784 5.00679 0.48043 5.11214 0.292893 5.29968C0.105357 5.48722 0 5.74157 0 6.00679C0 6.272 0.105357 6.52636 0.292893 6.71389C0.48043 6.90143 0.734784 7.00679 1 7.00679L11.414 6.99979L8.121 10.2928C8.02549 10.385 7.94931 10.4954 7.8969 10.6174C7.84449 10.7394 7.8169 10.8706 7.81575 11.0034C7.8146 11.1362 7.8399 11.2678 7.89018 11.3907C7.94046 11.5136 8.01471 11.6253 8.10861 11.7192C8.2025 11.8131 8.31415 11.8873 8.43705 11.9376C8.55994 11.9879 8.69162 12.0132 8.8244 12.012C8.95718 12.0109 9.0884 11.9833 9.2104 11.9309C9.33241 11.8785 9.44275 11.8023 9.535 11.7068L13.121 8.12179C13.3996 7.8432 13.6207 7.51246 13.7715 7.14845C13.9222 6.78444 13.9999 6.39429 13.9999 6.00029C13.9999 5.60628 13.9222 5.21613 13.7715 4.85212C13.6207 4.48811 13.3996 4.15737 13.121 3.87879L9.535 0.292787C9.34747 0.105316 9.09316 0 8.828 0C8.56284 0 8.30853 0.105316 8.121 0.292787Z" fill="white"/>
+						</svg>
+					</a>
+				</div>
+			</div>
+		</section>
 		<section class="project">
 			<div class="project-item slide-in-top">
 				<div class="project-item__img">
@@ -56,7 +154,7 @@
 					<div class="project-item__title">We complete every projects
 						extra care as customer need</div>
 					<div class="project-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </div>
-					<a href="/" class="btn project-item__btn">Read more</a>
+					<a href="/" style="color: white;" class="btn project-item__btn">Read more</a>
 				</div>
 			</div>
 			<div class="project-item slide-in-top">
@@ -67,12 +165,135 @@
 					<div class="project-item__title">We complete every projects
 						extra care as customer need</div>
 					<div class="project-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at dictum risus, non suscipit arcu. Quisque aliquam posuere tortor, sit amet convallis nuncoe scelerisque in. orem ipsum dolor sit amet, consectetur adipisicing elit. Labore eius molestiae facere, natus reprehenderit eaque eum, autem ipsam. Magfini, error. Tempora odit laborum iure inventore possimus laboriosam qui nam. </div>
-					<a href="/" class="btn project-item__btn">Read more</a>
+					<a href="/" style="color: white;" class="btn project-item__btn">Read more</a>
 				</div>
 			</div>
 		</section>
-
-
+		<section class="team">
+			<h2 class="team-title">Met Our Team</h2>
+			<p class="team-title__text">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis 
+				accumsan nisi Ut ut felis congue nisl hendrerit commodo.
+			</p>
+			<div class="team-content">
+				<div class="team-content__card">
+					<img src="img/team-1.png" alt="1">
+					<h4>Sunny Khan</h4>
+					<p>
+						Executive officer
+					</p> 
+					<ul class="team-content__icons">
+						<li>
+							<a href="#">
+								<img src="img/icons/skype.svg" alt="skype">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/link.svg" alt="ln">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/twitter.svg" alt="tw">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/fb.svg" alt="fb">
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="team-content__card">
+					<img src="img/team-2.png" alt="2">
+					<h4>Alina Jesia</h4>
+					<p>
+						UX/UI DESIGNER
+					</p> 
+					<ul class="team-content__icons">
+						<li>
+							<a href="#">
+								<img src="img/icons/skype.svg" alt="skype">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/link.svg" alt="ln">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/twitter.svg" alt="tw">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/fb.svg" alt="fb">
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="team-content__card">
+					<img src="img/team-3.png" alt="3">
+					<h4>Alex Sohag</h4>
+					<p>
+						BUSINESS DEVELOPMENT
+					</p> 
+					<ul class="team-content__icons">
+						<li>
+							<a href="#">
+								<img src="img/icons/skype.svg" alt="skype">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/link.svg" alt="ln">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/twitter.svg" alt="tw">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/fb.svg" alt="fb">
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="team-content__card">
+					<img src="img/team-4.png" alt="4">
+					<h4>Afroza Mou</h4>
+					<p>
+						Head of marketing
+					</p> 
+					<ul class="team-content__icons">
+						<li>
+							<a href="#">
+								<img src="img/icons/skype.svg" alt="skype">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/link.svg" alt="ln">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/twitter.svg" alt="tw">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="img/icons/fb.svg" alt="fb">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</div>
 	<footer class="footer" id="footer">
 		<div class="container">
@@ -81,7 +302,7 @@
 					<div class="footer-logo">
 						<a href="#" class="logo">
 							<img src="img/icons/logo.svg" alt="logo">
-							Zone
+							Zone.
 						</a>
 					</div>
 					<p>
